Bug 1564216 - Fix warnings in nsCocoaUtils.mm with 10.14 SDK. r=mstange

While there, transform the MOZ_ASSERTs into static_asserts, so that
discrepancies are caught at build time rather than runtime.

Differential Revision: https://phabricator.services.mozilla.com/D38165

--HG--
extra : moz-landing-system : lando